chore(tests): Add more test cases and edit files accordingly for tests to pass [Starts #165512860]
